# health-intel-backend

./: Cargo.toml  DOCS_CREATED.txt  DOCUMENTATION_INDEX.md  QUICK_START.md  README.md  challenges.md  project_journey.md
docs/: CONTRIBUTING.md  README.md  SYSTEM_OVERVIEW.md
docs/01-vision-and-strategy/: 01-the-three-party-problem.md  02-problem-statement.md  03-system-identity.md  04-value-creation-model.md  05-adoption-strategy.md  06-ai-strategy.md  README.md
docs/02-mvp-definition/: 01-mvp-scope.md  02-core-modules.md  README.md
docs/03-architecture/: 01-architecture-overview.md  README.md
docs/04-development-logs/: README.md
docs/05-challenges-and-solutions/: README.md
docs/06-data-models/: README.md
health-intel-web/: package-lock.json  package.json
health-intel-web/app/: layout.tsx  page.tsx
health-intel-web/components/: AddHospitalModal.tsx  AdminSidebar.tsx  CreateHospitalModal.tsx  Map.tsx
health-intel-web/lib/: api.ts
health-intel-web/types/: index.ts
migrations/: 0005_add_coordinates_to_hospitals.sql  0006_add_hospital_capabilities.sql  0007_create_departments_table.sql  0008_create_staff_table.sql  0009_create_patients_table.sql  0010_create_visits_table.sql  0011_create_equipment_table.sql  002_create_hospitals.sql  003_seed_hospitals.sql  004_unique_hospital_name.sql
src/: docs.rs  lib.rs  main.rs
src/config/: settings.rs
src/db/: department_repo.rs  equipment_repo.rs  hospital_repo.rs  mod.rs  patient_repo.rs  pool.rs  staff_repo.rs  user_repo.rs  visit_repo.rs
src/errors/: app.rs  db.rs  http.rs  mod.rs
src/models/: api_response.rs  department.rs  equipment.rs  hospital.rs  hospital_response.rs  mod.rs  patient.rs  single_hospital_response.rs  staff.rs  user.rs  visit.rs
tests/: auth.rs  clinical_flow.rs  create_hospital.rs  hospitals.rs
(+16 files in other folders)
