[package]
name = "health-intel-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.36", features = ["full"] }

tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.6", features = ["v4", "serde"] }
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = "0.3"

# Database (we’ll wire it later)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

jsonwebtoken = "9"
chrono = { version = "0.4.43", features = ["serde"] }
