[package]
name = "health-intel-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.36", features = ["full"] }

tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# ✅ Serde is already defined here, so you don't need it at the bottom
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.6", features = ["v4", "serde"] }
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

jsonwebtoken = "9"
chrono = { version = "0.4.43", features = ["serde"] }

envy = "0.4"
validator = { version = "0.19", features = ["derive"] }

reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0" # Helps with error handling in tests

utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }